--- a/Webpage_Nma/Webpage_Nma.csproj
+++ b/Webpage_Nma/Webpage_Nma.csproj
@@ -526,6 +526,7 @@
     <Compile Include="Site2.Master.designer.cs">
       <DependentUpon>Site2.Master</DependentUpon>
     </Compile>
+    <Compile Include="test.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\fonts\fa-brands-400.eot" />
