Revert "obtener ID"
This reverts commit f373eba3d0970d53c0c8a32d753141f405cf691d.

--- a/Webpage_Nma/Web.config
+++ b/Webpage_Nma/Web.config
@@ -25,13 +25,11 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IService1" />
+        <binding name="BasicHttpBinding_IService1"/>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:49430/Service1.svc" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IService1" contract="W_NMA.IService1"
-        name="BasicHttpBinding_IService1" />
+      <endpoint address="http://localhost:49430/Service1.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1" contract="W_NMA.IService1" name="BasicHttpBinding_IService1"/>
     </client>
   </system.serviceModel>
 </configuration>
