--- a/Webpage_Nma/bin/Webpage_Nma.dll.config
+++ b/Webpage_Nma/bin/Webpage_Nma.dll.config
@@ -25,13 +25,11 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IService1" />
+        <binding name="BasicHttpBinding_IService1"/>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:49430/Service1.svc" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IService1" contract="W_NMA.IService1"
-        name="BasicHttpBinding_IService1" />
+      <endpoint address="http://localhost:49430/Service1.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1" contract="W_NMA.IService1" name="BasicHttpBinding_IService1"/>
     </client>
   </system.serviceModel>
 </configuration>
